web/static/css/digest.css
/* --- STORIES --- */

.rank {
  width: 30px;
  font-size: 1.2rem;
  color: #7e7e7e;
  margin-top: 4px;
}

.rank .btn-link {
  color: inherit;
  text-decoration: none;
  font-weight: 400;
}

.title {
  font-weight: 400;
}

.is-read, .is-read {
  font-weight: 300;
}

/* --- FOOTER --- */

#device-id {
  cursor: help;
}

#copy-device-id {
  margin-left: 2px;
  cursor: pointer;
}

.generated-at {
  font-size: 0.8rem;
}

/* --- Cache detection --- */
#refresh {
  opacity: 0;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
}

